--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,8 @@
     },
     "rules": {
         "no-param-reassign":"off",
-        "class-methods-use-this":"off"
+        "class-methods-use-this":"off",
+        "no-shadow":"off",
+        "arrow-parens":"off"
     }
 }
