--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "webpack --mode=development --watch",
     "build": "webpack --mode=production",
     "none": "webpack --mode=none",
-    "sass_dev": "sass --watch assets/style/sass/:assets/style/",
-    "sass_build": "sass assets/style/sass/:assets/style/ --style=compressed"
+    "sass_dev": "sass --watch src/view/style:public/",
+    "sass_build": "sass src/view/style:public/ --style=compressed"
   },
   "repository": {
     "type": "git",
