--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "no-param-reassign":"off",
         "class-methods-use-this":"off",
         "no-shadow":"off",
-        "arrow-parens":"off"
+        "arrow-parens":"off",
+        "no-console":"off"
     }
 }
