--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "dev": "webpack --mode=development --watch",
     "build": "webpack --mode=production",
     "none": "webpack --mode=none",
-    "sass_dev": "sass --watch src/style/index.scss:main.css",
-    "sass_build": "sass src/style/index.scss:main.css --style=compressed"
+    "sass_dev": "sass --watch ./src/style/sass/index.scss:./src/style/main.css",
+    "sass_build": "sass ./src/style/sass/index.scss:./src/style/main.css --style=compressed"
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,18 @@
   },
   "homepage": "https://github.com/lucasfelipeluz/labecastore#readme",
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.24.2"
+  },
+  "dependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.6",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.14",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   }
