--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@babel/preset-env": "^7.15.6",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
+    "sequelize": "^6.9.0",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   }
