--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "sequelize": "^6.9.0",
+    "slugify": "^1.6.1",
     "webpack": "^5.53.0",
     "webpack-cli": "^4.8.0"
   }
