--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "@babel/preset-env": "^7.15.6",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "knex": "^0.95.14",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "sequelize": "^6.9.0",
