--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -15,7 +15,7 @@
         "class-methods-use-this":"off",
         "no-shadow":"off",
         "arrow-parens":"off",
-        "no-console":"off"
-        
+        "no-console":"off",
+        "object-curly-newline": "off"        
     }
 }
