--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,8 @@
 {
   "name": "labecastore",
-  "version": "0.0.1",
+  "version": "0.0.8",
   "description": "Loja Online de artigos esportivos",
-  "main": "index.js",
+  "main": "",
   "scripts": {
     "dev": "webpack --mode=development --watch",
     "build": "webpack --mode=production",
