--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,9 @@
     "@babel/core": "^7.15.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.6",
-    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "knex": "^0.95.14",
+    "mongoose": "^6.1.2",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "sequelize": "^6.9.0",
