--- a/backend/package.json
+++ b/backend/package.json
@@ -30,9 +30,13 @@
     "@babel/core": "^7.15.5",
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.6",
+    "aws-sdk": "^2.1046.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.14",
+    "mime": "^3.0.0",
     "mongoose": "^6.1.2",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.14",
     "sequelize": "^6.9.0",
