--- a/backend/package.json
+++ b/backend/package.json
@@ -23,10 +23,6 @@
     "eslint-plugin-import": "^2.24.2"
   },
   "dependencies": {
-    "@babel/cli": "^7.15.7",
-    "@babel/core": "^7.15.5",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.15.6",
     "aws-sdk": "^2.1046.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -38,7 +34,6 @@
     "nodemon": "^2.0.14",
     "sequelize": "^6.9.0",
     "slugify": "^1.6.1",
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "webpack": "^5.53.0"
   }
 }
