--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 [default]
-aws_access_key_id=AKIAY7YJGSRQ4KWK4HF2
-aws_secret_access_key=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
+aws_access_key_id=
+aws_secret_access_key=
