--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -1,21 +1,14 @@
 {
     "env": {
         "browser": true,
+        "commonjs": true,
         "es2021": true
     },
-    "extends": [
-        "airbnb-base"
-    ],
+    "extends": "eslint:recommended",
     "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
+        "ecmaVersion": 12
     },
     "rules": {
-        "no-param-reassign":"off",
-        "class-methods-use-this":"off",
-        "no-shadow":"off",
-        "arrow-parens":"off",
-        "no-console":"off",
-        "object-curly-newline": "off"        
+        "no-undef":"off"
     }
 }
