--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "",
   "scripts": {
     "dev": "nodemon app",
-    "build": "node app"
+    "build": "node app",
+    "test": "jest --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "aws-sdk": "^2.1046.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest": "^27.5.1",
     "knex": "^0.95.14",
     "mime": "^3.0.0",
     "multer": "^1.4.4",
@@ -33,6 +35,7 @@
     "nodemon": "^2.0.14",
     "sequelize": "^6.9.0",
     "slugify": "^1.6.1",
+    "supertest": "^6.2.2",
     "webpack": "^5.53.0"
   }
 }
