--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "description": "Loja Online de artigos esportivos",
   "main": "",
+  "engines": {
+    "node": "16.14.0",
+    "npm":"8.3.1"
+  },
   "scripts": {
     "start":"node app.js",
     "dev": "nodemon app",
