--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,19 @@
 [default]
 aws_access_key_id=
-aws_secret_access_key=
+aws_secret_access_key=/YwAZ3W7Aq
 aws_bucket_name=
 aws_region=
+AWS_SDK_LOAD_CONFIG=1
 
 db_host=
 db_user=
 db_password=
 db_database=
 
-mode_server=dev
+salt_hash=
+code_hash=
+secret_key=
+
+authStatus=
+
+server_mode=
