--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1135.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jest": "^27.5.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.14",
     "mime": "^3.0.0",
     "multer": "^1.4.4",
