--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "sequelize": "^6.9.0",
     "slugify": "^1.6.1",
     "supertest": "^6.2.2",
-    "webpack": "^5.53.0"
+    "swagger-ui-express": "^4.4.0",
+    "webpack": "^5.53.0",
+    "yamljs": "^0.3.0"
   }
 }
