chore: ajustes no .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,24 @@
-[default]
+** CREDENCIAS AWS **
 aws_access_key_id=
-aws_secret_access_key=/YwAZ3W7Aq
+aws_secret_access_key=
 aws_bucket_name=
 aws_region=
 AWS_SDK_LOAD_CONFIG=1
 
+** BANCO DE DADOS **
 db_host=
 db_user=
 db_password=
 db_database=
 
+** HASH DE LOGIN **
 salt_hash=
 code_hash=
 secret_key=
 
-authStatus=
+** DESATIVAR OU ATIVAR GUARDA DE ROTAS (MIDDLEWARE) **
+authStatus=true
 
+** LOCAL DE EXECUÇÃO **
+** dev ou prod **
 server_mode=
