--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "labecastore",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Loja Online de artigos esportivos",
   "main": "app.js",
   "engines": {
-    "node": "16.14.0",
-    "npm": "8.3.1"
+    "node": "16.15.1",
+    "npm": "8.11.0"
   },
   "scripts": {
     "start": "node app.js",
@@ -14,7 +14,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lucasfelipeluz/labecastore.git"
+    "url": "https://github.com/lucasfelipeluz/labecastore.backend"
   },
   "author": "Lucas Luz",
   "license": "ISC",
